StatsProjsTable: fix gaps

--- a/src/public/less/components/statistics-project-table.less
+++ b/src/public/less/components/statistics-project-table.less
@@ -3,10 +3,10 @@
 	font-style: normal;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
-	padding-top: 40px;
+	margin-top: 40px;
 
 	@media (min-width: @screen-sm-min) {
-		padding-top: 80px;
+		margin-top: 80px;
 	}
 
 	.projects-info {
@@ -125,7 +125,6 @@
 
 	.projects-data-table {
 		margin-top: 26px;
-		margin-bottom: 80px;
 		height: 662px;
 		background: #fff;
 		border: 1px solid #dfe3e7;
